--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "express": "~4.16.1",
     "formidable": "^2.1.1",
     "http-errors": "~1.6.3",
+    "ip": "^1.1.8",
     "morgan": "~1.9.1",
     "pug": "2.0.0-beta11",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^4.6.3"
+    "swagger-ui-express": "^4.6.3",
+    "ws": "^8.13.0"
   }
 }
